little repo cleanup

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -137,10 +137,10 @@
     "\n",
     "    dspy.settings.configure(lm=lm)\n",
     "\n",
-    "    # df[\"predict_cooklang\"] = df.apply(\n",
-    "    #     lambda row: get_cooklang(row, program), axis=1\n",
-    "    # )\n",
-    "    # df.to_csv(f\"data/silver/{program_name}_predictions.tsv\", sep=\"\\t\", index=False)\n"
+    "    df[\"predict_cooklang\"] = df.apply(\n",
+    "        lambda row: get_cooklang(row, program), axis=1\n",
+    "    )\n",
+    "    df.to_csv(f\"data/silver/{program_name}_predictions.tsv\", sep=\"\\t\", index=False)\n"
    ]
   }
  ],
