second submission push

--- a/eval.ipynb
+++ b/eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,10 +18,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import matplotlib.ticker as ticker\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Set up the plot style\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set_palette(\"pastel\")\n",
+    "\n",
     "\n",
     "def calculate_wer(true: str, pred: str) -> float:\n",
     "    error = wer(true, pred)\n",
@@ -175,6 +177,7 @@
     "    \"find_all_amounts\",\n",
     "    \"num_bonus_amounts\",\n",
     "    \"num_missing_amounts\",\n",
+    "    \"failed_generations\",\n",
     "]"
    ]
   },
@@ -190,7 +193,7 @@
     "pattern = os.path.join(directory, \"*.tsv\")\n",
     "files = glob.glob(pattern)\n",
     "all_dfs = []\n",
-    "for file_path in files:\n",
+    "for file_path in tqdm(files):\n",
     "    file_name = os.path.basename(file_path)\n",
     "    file_name = file_name.replace(\".json_predictions.tsv\", \"\")\n",
     "    prompt_techqnique = file_name.split(\"_\")[0]\n",
@@ -199,6 +202,8 @@
     "    without_ings = True if \"without_ings\" not in file_name else False\n",
     "\n",
     "    df = pd.read_csv(file_path, sep=\"\\t\")\n",
+    "    df[\"cooklang\"] = df[\"cooklang\"].fillna(\"Cooking instructions not available\")\n",
+    "    df[\"predict_cooklang\"] = df[\"predict_cooklang\"].fillna(\"Failed to generate\")\n",
     "    df[\"cooklang\"] = df[\"cooklang\"].apply(lambda x: x.strip())\n",
     "\n",
     "    df[\"WER\"] = df.apply(\n",
@@ -244,31 +249,49 @@
     "        lambda row: eval_amounts(row[\"cooklang\"], row[\"predict_cooklang\"])[2], axis=1\n",
     "    )\n",
     "\n",
+    "    df[\"failed_generations\"] = df[\"predict_cooklang\"].apply(\n",
+    "        lambda x: 1 if x == \"Failed to generate\" else 0\n",
+    "    )\n",
     "    df[\"prompt_techqnique\"] = prompt_techqnique\n",
     "    df[\"model\"] = model\n",
     "    df[\"with_cooklang\"] = with_cooklang\n",
     "    df[\"without_ings\"] = without_ings\n",
-    "    df = (\n",
-    "        df.groupby([\"prompt_techqnique\", \"model\", \"with_cooklang\", \"without_ings\"])[\n",
-    "            metrics\n",
-    "        ]\n",
-    "        .mean()\n",
-    "        .reset_index()\n",
-    "    )\n",
-    "    all_dfs.append(df)\n",
+    "    f = df.groupby([\"prompt_techqnique\", \"model\", \"with_cooklang\", \"without_ings\"])[\n",
+    "        [col for col in metrics if col != \"failed_generations\"]\n",
+    "    ].mean()\n",
+    "\n",
+    "    # Calculate sum and count for failed_generations\n",
+    "    if \"failed_generations\" in metrics:\n",
+    "        failed_count = df.groupby(\n",
+    "            [\"prompt_techqnique\", \"model\", \"with_cooklang\", \"without_ings\"]\n",
+    "        )[\"failed_generations\"].sum()\n",
+    "\n",
+    "        f[\"failed_generations\"] = failed_count\n",
+    "\n",
+    "    all_dfs.append(f)\n",
     "df = pd.concat(\n",
     "    all_dfs\n",
     ")  # .to_csv('data/silver/evaluated_metrics.tsv', sep='\\t', index=False)\n",
-    "df.reset_index(drop=True, inplace=True)"
+    "df = df.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_model_comparison(data, name_prefix=\"\" ,metrics=[\"WER\", \"ROUGE-L\", \"TER\"]):\n",
+    "df[\"model\"] = df[\"model\"].replace({\"llama3.1:70b\": \"llama3.3:70b\"})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_model_comparison(data, name_prefix=\"\", metrics=[\"WER\", \"ROUGE-L\", \"TER\"]):\n",
     "    num_metrics = len(metrics)\n",
     "    plt.figure(figsize=(6 * num_metrics, 6))  # Increased figure size\n",
     "\n",
@@ -298,7 +321,9 @@
     "    plt.close()\n",
     "\n",
     "\n",
-    "def plot_prompt_technique_analysis(data, name_prefix=\"\", metrics=[\"WER\", \"ROUGE-L\", \"TER\"]):\n",
+    "def plot_prompt_technique_analysis(\n",
+    "    data, name_prefix=\"\", metrics=[\"WER\", \"ROUGE-L\", \"TER\"]\n",
+    "):\n",
     "    plt.figure(figsize=(20, 15))\n",
     "    plt.rcParams.update(\n",
     "        {\n",
@@ -320,13 +345,17 @@
     "        plt.legend(title=\"Prompt Technique\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f\"plots/{name_prefix}prompt_technique_analysis.png\", bbox_inches=\"tight\")\n",
+    "    plt.savefig(\n",
+    "        f\"plots/{name_prefix}prompt_technique_analysis.png\", bbox_inches=\"tight\"\n",
+    "    )\n",
     "    plt.show()\n",
     "    plt.close()\n",
     "\n",
     "\n",
     "# 3. Impact of Cooklang and Ingredients\n",
-    "def plot_cooklang_ingredients_impact(data, name_prefix=\"\", metrics=[\"WER\", \"ROUGE-L\", \"TER\"]):\n",
+    "def plot_cooklang_ingredients_impact(\n",
+    "    data, name_prefix=\"\", metrics=[\"WER\", \"ROUGE-L\", \"TER\"]\n",
+    "):\n",
     "    plt.figure(figsize=(15, 15))\n",
     "    plt.rcParams.update(\n",
     "        {\n",
@@ -364,6 +393,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standard_metrics = [\"WER\", \"ROUGE-L\", \"TER\"]\n",
+    "\n",
+    "data = (\n",
+    "    df.groupby([\"model\", \"prompt_techqnique\"])[standard_metrics]\n",
+    "    .mean()\n",
+    "    .round(4)\n",
+    "    .reset_index()\n",
+    ")\n",
+    "data.sort_values(\n",
+    "    by=[\"ROUGE-L\"],\n",
+    "    ascending=[False]\n",
+    "    # inplace=True,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,8 +434,10 @@
     "    ]\n",
     "    .mean()\n",
     "    .reset_index()\n",
-    ") \n",
-    "data.head()"
+    ")\n",
+    "# data.sort_values(by=\"model\").round(4).sort_values(by=\"ROUGE-L\", ascending=False)\n",
+    "# print(data)\n",
+    "# sns.boxplot(x=\"model\", y=\"WER\", hue=\"with_cooklang\", data=data)"
    ]
   },
   {
@@ -412,16 +464,8 @@
     "    \"find_all_units\",\n",
     "    \"find_all_amounts\",\n",
     "]\n",
-    "data = (\n",
-    "    df.groupby([\"with_cooklang\", \"without_ings\", \"model\", \"prompt_techqnique\"])[\n",
-    "        domain_metrics\n",
-    "    ]\n",
-    "    .mean()\n",
-    "    .reset_index()\n",
-    ")\n",
-    "\n",
-    "# data = data.sort_values(by=\"find_all_ings\", ascending=False)\n",
-    "# data.to_markdown()"
+    "data = df.groupby([\"model\", \"prompt_techqnique\"])[domain_metrics].mean().reset_index()\n",
+    "data.round(4)"
    ]
   },
   {
@@ -430,9 +474,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_model_comparison(data, metrics=domain_metrics,name_prefix=\"domain_\")\n",
-    "plot_prompt_technique_analysis(data, metrics=domain_metrics,name_prefix=\"domain_\")\n",
-    "plot_cooklang_ingredients_impact(data, metrics=domain_metrics,name_prefix=\"domain_\")"
+    "plot_model_comparison(data, metrics=domain_metrics, name_prefix=\"domain_\")\n",
+    "plot_prompt_technique_analysis(data, metrics=domain_metrics, name_prefix=\"domain_\")\n",
+    "plot_cooklang_ingredients_impact(data, metrics=domain_metrics, name_prefix=\"domain_\")"
    ]
   },
   {
@@ -446,12 +490,12 @@
     "    fig, ax = plt.subplots(figsize=(12, 8))\n",
     "\n",
     "    # Create the bar plot\n",
-    "    sns.barplot(\n",
-    "        x=\"find_all_ings\", y=\"model\", data=df, orient=\"h\", ax=ax\n",
-    "    )\n",
+    "    sns.barplot(x=\"find_all_ings\", y=\"model\", data=df, orient=\"h\", ax=ax)\n",
     "\n",
     "    # Customize the plot\n",
-    "    ax.set_title(\"Model Performance in Ingredient Identification\", fontsize=22, fontweight='bold')\n",
+    "    ax.set_title(\n",
+    "        \"Model Performance in Ingredient Identification\", fontsize=22, fontweight=\"bold\"\n",
+    "    )\n",
     "    ax.set_xlabel(\"Score\", fontsize=18)\n",
     "    ax.set_ylabel(\"Model\", fontsize=18)\n",
     "\n",
@@ -460,22 +504,27 @@
     "    ax.xaxis.set_major_formatter(ticker.PercentFormatter(xmax=1))\n",
     "\n",
     "    # Customize grid\n",
-    "    ax.grid(axis=\"x\", linestyle=\"--\", alpha=0.7, color='gray')\n",
+    "    ax.grid(axis=\"x\", linestyle=\"--\", alpha=0.7, color=\"gray\")\n",
     "    ax.tick_params(axis=\"both\", which=\"major\", labelsize=14)\n",
     "\n",
     "    # Remove top and right spines\n",
-    "    ax.spines['top'].set_visible(False)\n",
-    "    ax.spines['right'].set_visible(False)\n",
+    "    ax.spines[\"top\"].set_visible(False)\n",
+    "    ax.spines[\"right\"].set_visible(False)\n",
     "\n",
     "    # Add value labels to the end of each bar\n",
     "    for i, v in enumerate(df[\"find_all_ings\"]):\n",
-    "        ax.text(v, i, f\" {v:.2%}\", va=\"center\", fontsize=14, fontweight='bold')\n",
+    "        ax.text(v, i, f\" {v:.2%}\", va=\"center\", fontsize=14, fontweight=\"bold\")\n",
     "\n",
     "    # Adjust layout and save with high DPI\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f\"plots/{name_prefix}model_performance_in_ing_identification.png\", dpi=300, bbox_inches='tight')\n",
+    "    plt.savefig(\n",
+    "        f\"plots/{name_prefix}model_performance_in_ing_identification.png\",\n",
+    "        dpi=300,\n",
+    "        bbox_inches=\"tight\",\n",
+    "    )\n",
     "    plt.show()\n",
     "    plt.close()\n",
+    "\n",
     "\n",
     "# Assuming df is your DataFrame\n",
     "data = df.groupby([\"model\"])[[\"find_all_ings\"]].mean().reset_index()\n",
