--- a/predict.ipynb
+++ b/predict.ipynb
@@ -19,25 +19,28 @@
     "import cooklang\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# load your environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
-    "# azure-openai model deployment\n",
-    "AZURE_OPENAI_KEY = os.getenv(\"AZURE_OPENAI_KEY\")\n",
-    "AZURE_OPENAI_ENDPOINT = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
-    "AZURE_OPENAI_DEPLOYMENT_4o_mini = os.getenv(\"AZURE_OPENAI_DEPLOYMENT_4o_mini\")\n",
-    "AZURE_OPENAI_DEPLOYMENT_4o = os.getenv(\"AZURE_OPENAI_DEPLOYMENT_4o\")\n",
-    "AZURE_OPENAI_VERSION = os.getenv(\"AZURE_OPENAI_VERSION\")\n",
-    "\n",
+    "# litellm deployment\n",
+    "LITELLM_URL = os.getenv(\"LITELLM_URL\")\n",
+    "LITELLM_API_KEY = os.getenv(\"LITELLM_API_KEY\")\n",
     "# ollama deployment\n",
     "OLLAMA_URL = os.getenv(\"OLLAMA_URL\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +57,10 @@
     "\n",
     "    df = pd.read_csv(\"data/bronze/cooklang_dataset_with_method.tsv\", sep=\"\\t\")\n",
     "    df[\"ingredients\"] = df[\"cooklang\"].apply(parse_ingredients)\n",
+    "\n",
+    "    r_df = pd.read_csv(\"data/bronze/recipe_dataset_with_method.tsv\", sep=\"\\t\")\n",
+    "    b_df = pd.read_csv(\"data/bronze/bonmot_dataset_with_method.tsv\", sep=\"\\t\")\n",
+    "    df = pd.concat([df, r_df, b_df], ignore_index=True)\n",
     "    df[\"ingredients\"] = df[\"ingredients\"].fillna(\"No ingredients.\")\n",
     "    return df"
    ]
@@ -89,6 +96,7 @@
     "            pred = program(recipe_text=method)\n",
     "        else:\n",
     "            raise ValueError(\"Invalid program type\")\n",
+    "        print(f\"Generated: {pred.cooklang}\")\n",
     "        return pred.cooklang\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
@@ -96,26 +104,19 @@
     "\n",
     "\n",
     "def get_lm(model):\n",
-    "    # client for AzureOpenAI\n",
-    "    if model == \"gpt-4o\":\n",
-    "        lm = dspy.AzureOpenAI(\n",
-    "            api_base=AZURE_OPENAI_ENDPOINT,\n",
-    "            api_version=AZURE_OPENAI_VERSION,\n",
-    "            deployment_id=AZURE_OPENAI_DEPLOYMENT_4o,\n",
-    "            api_key=AZURE_OPENAI_KEY,\n",
-    "            max_tokens=2_000,\n",
-    "        )\n",
-    "    elif model == \"gpt-4o-mini\":\n",
-    "        lm = dspy.AzureOpenAI(\n",
-    "            api_base=AZURE_OPENAI_ENDPOINT,\n",
-    "            api_version=AZURE_OPENAI_VERSION,\n",
-    "            deployment_id=AZURE_OPENAI_DEPLOYMENT_4o_mini,\n",
-    "            api_key=AZURE_OPENAI_KEY,\n",
+    "    if \"gpt-\" in model:\n",
+    "        lm = dspy.LM(\n",
+    "            model,\n",
+    "            api_base=LITELLM_URL,\n",
+    "            api_key=LITELLM_API_KEY,\n",
+    "            temperature=0,\n",
+    "            cache=False,\n",
     "            max_tokens=2_000,\n",
     "        )\n",
     "    elif \"llama\" in model:\n",
-    "        model = model.split(\"+\")[0]\n",
-    "        lm = dspy.OllamaLocal(base_url=OLLAMA_URL, model=model, max_tokens=2_000)\n",
+    "        lm = dspy.LM(\n",
+    "            base_url=OLLAMA_URL, model=f\"ollama/{model}\", max_tokens=2_000, cache=False\n",
+    "        )\n",
     "    else:\n",
     "        raise ValueError(\"Invalid model name\")\n",
     "    return lm\n",
@@ -134,13 +135,35 @@
     "    )\n",
     "    df = load_raw_data()\n",
     "    lm = get_lm(model)\n",
-    "\n",
     "    dspy.settings.configure(lm=lm)\n",
     "\n",
-    "    df[\"predict_cooklang\"] = df.apply(\n",
-    "        lambda row: get_cooklang(row, program), axis=1\n",
+    "    examples = []\n",
+    "    for _, row in df.iterrows():\n",
+    "        if not without_ings:\n",
+    "            examples.append(\n",
+    "                dspy.Example(recipe_text=row[\"method\"]).with_inputs(\"recipe_text\")\n",
+    "            )\n",
+    "        else:\n",
+    "            examples.append(\n",
+    "                dspy.Example(\n",
+    "                    recipe_text=row[\"method\"], ingredients=row[\"ingredients\"]\n",
+    "                ).with_inputs(\"recipe_text\", \"ingredients\")\n",
+    "            )\n",
+    "\n",
+    "    evaluate = dspy.Evaluate(\n",
+    "        devset=examples,\n",
+    "        metric=lambda x, y: True,\n",
+    "        num_threads=15,\n",
+    "        display_progress=True,\n",
+    "        return_outputs=True,\n",
     "    )\n",
-    "    df.to_csv(f\"data/silver/{program_name}_predictions.tsv\", sep=\"\\t\", index=False)\n"
+    "    _, outputs = evaluate(program)\n",
+    "    answers = [dict(output[1]) for output in outputs]\n",
+    "    eval_df = pd.DataFrame(answers)\n",
+    "    df[\"predict_cooklang\"] = eval_df[\"cooklang\"]\n",
+    "\n",
+    "    df[\"predict_cooklang\"] = df[\"predict_cooklang\"].fillna(\"Failed to generate\")\n",
+    "    df.to_csv(f\"data/silver/{program_name}_predictions.tsv\", sep=\"\\t\", index=False)"
    ]
   }
  ],
