--- a/pycooklang.ipynb
+++ b/pycooklang.ipynb
@@ -9,7 +9,6 @@
     "import cooklang\n",
     "import pandas as pd\n",
     "import os\n",
-    "import re\n",
     "\n",
     "import dspy\n",
     "from dspy.evaluate import Evaluate\n",
@@ -17,17 +16,23 @@
     "    BootstrapFewShotWithRandomSearch,\n",
     "    MIPROv2,\n",
     ")\n",
+    "import json\n",
     "\n",
     "from programs import (\n",
     "    CookLangFormatter,\n",
     "    CookLangFormatterNoSteps,\n",
     "    CookLangFormatterNoStepsNoIngredients,\n",
     "    CookLangSignature,\n",
-    "    CookLangSignatureNoSteps,\n",
-    "    CookLangSignatureNoStepsNoIngredients,\n",
     ")\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# load your environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
@@ -68,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,13 +116,9 @@
     "\n",
     "\n",
     "def compare_arrays(true_arr, pred_arr):\n",
-    "    import json\n",
-    "\n",
-    "    # Convert dictionaries to JSON strings for comparison\n",
     "    true_set = set(json.dumps(d, sort_keys=True) for d in true_arr)\n",
     "    pred_set = set(json.dumps(d, sort_keys=True) for d in pred_arr)\n",
     "\n",
-    "    # Check if all true values are in pred\n",
     "    all_true_in_pred = true_set.issubset(pred_set)\n",
     "\n",
     "    # Find bonus pred values\n",
@@ -140,12 +141,6 @@
     "        all_true_in_pred, bonus_pred = compare_arrays(\n",
     "            true_ingredients, pred_ingredients\n",
     "        )\n",
-    "\n",
-    "        # # Print results\n",
-    "        # print(f\"Are all True values in Pred? {all_true_in_pred}\")\n",
-    "        # print(\"Bonus Pred values:\")\n",
-    "        # for item in bonus_pred:\n",
-    "        #     print(item)\n",
     "\n",
     "        if all_true_in_pred:\n",
     "            score = True\n",
@@ -182,7 +177,7 @@
     "    \"llama3.1:8b\",\n",
     "    \"llama3.1:70b\",\n",
     "    AZURE_OPENAI_DEPLOYMENT_4o_mini,\n",
-    "    AZURE_OPENAI_DEPLOYMENT_4o,\n",
+    "    \"azure/gpt-4o\",\n",
     "]\n",
     "\n",
     "config = {\n",
@@ -194,35 +189,41 @@
     "\n",
     "for model_name in models:\n",
     "    if \"llama\" in model_name:\n",
-    "        lm = dspy.OllamaLocal(base_url=OLLAMA_URL, model=model_name)\n",
-    "    else:\n",
-    "        lm = dspy.AzureOpenAI(\n",
+    "        lm = dspy.LM(base_url=OLLAMA_URL, model=model_name)\n",
+    "    elif \"azure/gpt-4o\" == model_name:\n",
+    "        lm = dspy.LM(\n",
+    "            model_name,\n",
     "            api_base=AZURE_OPENAI_ENDPOINT,\n",
     "            api_version=AZURE_OPENAI_VERSION,\n",
-    "            deployment_id=model_name,\n",
     "            api_key=AZURE_OPENAI_KEY,\n",
+    "            temperature=0,\n",
+    "            cache=True,\n",
     "            max_tokens=2_000,\n",
     "        )\n",
-    "    lm = dspy.OllamaLocal(base_url=OLLAMA_URL, model=model_name)\n",
+    "    else:\n",
+    "        lm = dspy.LM(\n",
+    "            model_name,\n",
+    "            api_base=AZURE_OPENAI_ENDPOINT,\n",
+    "            api_version=AZURE_OPENAI_VERSION,\n",
+    "            # api_key=AZURE_OPENAI_KEY,\n",
+    "            temperature=0,\n",
+    "            cache=True,\n",
+    "            max_tokens=2_000,\n",
+    "        )\n",
     "    dspy.settings.configure(lm=lm)\n",
-    "\n",
+    "    model_name = model_name.replace(\"azure/\", \"\")\n",
     "    # no cooklang\n",
-    "\n",
     "    teleprompter = MIPROv2(\n",
-    "        prompt_model=lm,\n",
-    "        task_model=lm,\n",
     "        metric=validate_answer,\n",
-    "        num_candidates=10,\n",
-    "        init_temperature=1.0,\n",
+    "        auto=\"light\",  # Can choose between light, medium, and heavy optimization runs\n",
+    "        num_threads=10,\n",
     "    )\n",
-    "    kwargs = dict(num_threads=4, display_progress=False, display_table=0)\n",
+    "\n",
     "    compiled_prompt_opt = teleprompter.compile(\n",
     "        CookLangFormatterNoSteps(),\n",
     "        trainset=examples,\n",
-    "        num_batches=20,\n",
     "        max_bootstrapped_demos=3,\n",
     "        max_labeled_demos=5,\n",
-    "        eval_kwargs=kwargs,\n",
     "        requires_permission_to_run=False,\n",
     "    )\n",
     "    compiled_prompt_opt.save(\n",
@@ -240,22 +241,17 @@
     "    )\n",
     "\n",
     "    # no cooklang, no ingredients\n",
-    "\n",
     "    teleprompter = MIPROv2(\n",
-    "        prompt_model=lm,\n",
-    "        task_model=lm,\n",
     "        metric=validate_answer,\n",
-    "        num_candidates=10,\n",
-    "        init_temperature=1.0,\n",
+    "        auto=\"light\",  # Can choose between light, medium, and heavy optimization runs\n",
+    "        num_threads=10,\n",
     "    )\n",
-    "    kwargs = dict(num_threads=4, display_progress=False, display_table=0)\n",
+    "    # CookLangFormatterNoStepsNoIngredients\n",
     "    compiled_prompt_opt = teleprompter.compile(\n",
     "        CookLangFormatterNoStepsNoIngredients(),\n",
     "        trainset=examples_no_ingredients,\n",
-    "        num_batches=20,\n",
     "        max_bootstrapped_demos=3,\n",
     "        max_labeled_demos=5,\n",
-    "        eval_kwargs=kwargs,\n",
     "        requires_permission_to_run=False,\n",
     "    )\n",
     "    compiled_prompt_opt.save(\n",
@@ -277,20 +273,15 @@
     "    # with cooklang\n",
     "\n",
     "    teleprompter = MIPROv2(\n",
-    "        prompt_model=lm,\n",
-    "        task_model=lm,\n",
     "        metric=validate_answer,\n",
-    "        num_candidates=10,\n",
-    "        init_temperature=1.0,\n",
+    "        auto=\"light\",  # Can choose between light, medium, and heavy optimization runs\n",
+    "        num_threads=10,\n",
     "    )\n",
-    "    kwargs = dict(num_threads=4, display_progress=False, display_table=0)\n",
     "    compiled_prompt_opt = teleprompter.compile(\n",
     "        CookLangFormatter(),\n",
     "        trainset=examples,\n",
-    "        num_batches=20,\n",
     "        max_bootstrapped_demos=3,\n",
     "        max_labeled_demos=5,\n",
-    "        eval_kwargs=kwargs,\n",
     "        requires_permission_to_run=False,\n",
     "    )\n",
     "    compiled_prompt_opt.save(\n",
@@ -307,6 +298,13 @@
     "        f\"data/programs/zeroshot_{model_name}_with_cooklang_spec.json\"\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
